--- a/package.json
+++ b/package.json
@@ -9,30 +9,24 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-select": "^2.1.1",
-        "@radix-ui/react-slider": "^1.2.0",
-        "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-switch": "^1.1.0",
-        "@radix-ui/react-tabs": "^1.1.0",
-        "@radix-ui/react-toast": "^1.2.1",
-        "class-variance-authority": "^0.7.0",
+        "@ffmpeg/ffmpeg": "^0.12.15",
+        "@ffmpeg/util": "^0.12.2",
         "clsx": "^2.1.1",
-        "lucide-react": "^0.441.0",
-        "next": "14.2.12",
-        "react": "^18",
-        "react-dom": "^18",
-        "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7"
+        "lucide-react": "^0.451.0",
+        "next": "15.0.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "tailwind-merge": "^2.5.2"
     },
     "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "eslint": "^8",
-        "eslint-config-next": "14.2.12",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+        "@types/node": "^20.16.10",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^8.57.1",
+        "eslint-config-next": "15.0.3",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.13",
+        "typescript": "^5.6.3"
     }
 }
